[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Team/TeamQuestion.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/TooltipWindow.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/buttonLong.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/buttonLongPressed.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Buttons/MM_Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/Font_Regular24.tres" type="DynamicFont" id=6]
[ext_resource path="res://Fonts/Font_Regular40.tres" type="DynamicFont" id=7]
[ext_resource path="res://Fonts/Font_Light16.tres" type="DynamicFont" id=8]

[node name="TeamQuestion" type="Node2D"]
script = ExtResource( 1 )

[node name="TooltipWindow" type="Sprite" parent="."]
modulate = Color( 0.835294, 0.866667, 0.870588, 1 )
position = Vector2( 320, 320 )
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
margin_left = 164.0
margin_top = 148.0
margin_right = 474.0
margin_bottom = 263.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Tooltip title text"
align = 1
valign = 1
autowrap = true

[node name="Body" type="Label" parent="."]
margin_left = 164.0
margin_top = 272.0
margin_right = 474.0
margin_bottom = 418.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "This text represents the body of a tooltip and in it will be all the information necessary for user to make a decision."
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Open_Button" parent="." instance=ExtResource( 5 )]
margin_left = 148.0
margin_top = 424.0
margin_right = 320.0
margin_bottom = 478.0
icon = ExtResource( 3 )
buttonText = "TEAM"
sPressed = ExtResource( 4 )
sReleased = ExtResource( 3 )
usedFont = ExtResource( 6 )

[node name="Skip_Button" parent="." instance=ExtResource( 5 )]
margin_left = 320.0
margin_top = 424.0
margin_right = 492.0
margin_bottom = 478.0
icon = ExtResource( 3 )
buttonText = "SKIP"
sPressed = ExtResource( 4 )
sReleased = ExtResource( 3 )
usedFont = ExtResource( 6 )

[connection signal="buttonPressed" from="Open_Button" to="." method="_on_Open_Button_buttonPressed"]
[connection signal="buttonPressed" from="Skip_Button" to="." method="_on_Skip_Button_buttonPressed"]
